vr, mr, game, animation and character page updated

--- a/animation-services.html
+++ b/animation-services.html
@@ -517,8 +517,8 @@
 			<div class="row mt-4">
                 <div class="col-md-6 col-lg-4 wow fadeInLeft">
                     <div class="card">
-                        <div class="card-body custom-mr-service">
-							<img src="images/services/ar-development/custom-ar-development.webp" alt="Video Animation Services" class="metaverse-service-img">
+                        <div class="card-body">
+							<img src="images/services/animation-service/explainer-video-animation.png" alt="Video Animation Services" class="metaverse-service-img">
                             <h5 class="pt-3 text-white">Explainer Video Animation Services</h5>
                             <p class="pt-2 text-white">Get your company's message out there uniquely with an animated explainer video. Our explainer videos are a means of transforming viewers into buyers. We create explainer videos to assist companies in telling their story in a way that is easy to remember and share. Our staff is prepared to make your pitch stand out, attract attention, and convey your message.</p>
                         </div>
@@ -526,8 +526,8 @@
                 </div>
                 <div class="col-md-6 col-lg-4 pt-3 pt-sm-3 pt-md-0 pt-lg-0 wow fadeInDown">
                     <div class="card">
-                        <div class="card-body custom-mr-service">
-							<img src="images/services/ar-development/ar-experience-design.webp" alt="Logo Animation Services" class="metaverse-service-img">
+                        <div class="card-body">
+							<img src="images/services/animation-service/logo-animation.png" alt="Logo Animation Services" class="metaverse-service-img">
                             <h5 class="pt-3 text-white">Logo Animation Services</h5>
                             <p class="pt-2 text-white">Reinvent your brand's identity with our logo animation services. Animated logos breathe new life into any brand, promoting it unexpectedly. With a team of professionals and cutting-edge tools, we blend innovative styles and bright colors and create scripts to create a wholly distinctive and animated brand identity for you.</p>
                         </div>
@@ -535,8 +535,8 @@
                 </div>
                 <div class="col-md-6 col-lg-4 wow fadeInRight pt-3 pt-sm-3 pt-md-3 pt-xl-0">
                     <div class="card">
-                        <div class="card-body custom-mr-service">
-							<img src="images/services/ar-development/ar-games-development.webp" alt="3D Animation Services" class="metaverse-service-img">
+                        <div class="card-body">
+							<img src="images/services/animation-service/3d-animation.png" alt="3D Animation Services" class="metaverse-service-img">
                             <h5 class="pt-3 text-white">3D Animation Services</h5>
                             <p class="pt-2 text-white">Open your door to the next level of animation. We have a large staff of skilled 3D artists that can create spectacular graphics, videos, and renderings to help you sell, advertise, or promote new products. Our 3D animation services cover everything from product live-action advertising content to delivering scenes that bring life to your story.</p>
                         </div>
@@ -544,8 +544,8 @@
                 </div>
                 <div class="col-md-6 col-lg-4 wow fadeInLeft pt-3">
                     <div class="card">
-                        <div class="card-body custom-mr-service">
-							<img src="images/services/ar-development/ar-app-development.webp" alt="2D Animation Services" class="metaverse-service-img">
+                        <div class="card-body">
+							<img src="images/services/animation-service/2d-animation.png" alt="2D Animation Services" class="metaverse-service-img">
                             <h5 class="pt-3 text-white">2D Animation Services</h5>
                             <p class="pt-2 text-white">Our professionals know what works when it comes to digital 2D content. Our 2D industry specialists are here to bring your digital creations to life. We have worked on 2D projects for small businesses and big organizations. Plus, we collaborate with you to guarantee that your 2D animated video fulfills your objectives and delivers the outcomes you expect.</p>
                         </div>
@@ -553,8 +553,8 @@
                 </div>
                 <div class="col-md-6 col-lg-4 wow fadeInUp pt-3">
                     <div class="card">
-                        <div class="card-body custom-mr-service">
-							<img src="images/services/ar-development/ar-support-and-maintenance.webp" alt="Whiteboard Animation Services" class="metaverse-service-img">
+                        <div class="card-body">
+							<img src="images/services/animation-service/white-board-animation.png" alt="Whiteboard Animation Services" class="metaverse-service-img">
                             <h5 class="pt-3 text-white">Whiteboard Animation Services</h5>
                             <p class="pt-2 text-white">Say goodbye to erasing and redrawing since we have discovered a workaround. Instead, we convert your concept into a whiteboard video that will leave your viewers wanting more with our whiteboard animation services. Our drawings, voice-overs, and motion graphics enable us to create concise and compelling whiteboard animations.</p>
                         </div>
@@ -562,8 +562,8 @@
                 </div>
                 <div class="col-md-6 col-lg-4 wow fadeInRight pt-3">
                     <div class="card">
-                        <div class="card-body custom-mr-service">
-							<img src="images/services/ar-development/ar-integration-service.webp" alt="Character Animation Services" class="metaverse-service-img">
+                        <div class="card-body">
+							<img src="images/services/animation-service/character-animation.png" alt="Character Animation Services" class="metaverse-service-img">
                             <h5 class="pt-3 text-white">Character Animation Services</h5>
                             <p class="pt-2 text-white">Whether you are a production company searching for a character animation service or seeking a freelancer to work with, we help you bring your narrative to life - whatever way you choose. We are a video animation company you can always rely on for high-quality character animation services that will add visual impact to your stories.</p>
                         </div>
@@ -571,8 +571,8 @@
                 </div>
 				<div class="col-md-6 col-lg-4 wow fadeInLeft pt-3">
 					<div class="card">
-                        <div class="card-body custom-mr-service">
-							<img src="images/services/ar-development/ar-support-and-maintenance.webp" alt="TV Commercial Animation Services" class="metaverse-service-img">
+                        <div class="card-body">
+							<img src="images/services/animation-service/tv-commercial-animation.png" alt="TV Commercial Animation Services" class="metaverse-service-img">
                             <h5 class="pt-3 text-white">TV Commercial Animation Services</h5>
                             <p class="pt-2 text-white">We offer full TV commercial animation services, from idea to completion. Our writers, animators, and designers are committed to creating effective, attention-grabbing advertising that boosts sales and maximizes ROI. Future Reality’s high-quality corporate TV commercial animation includes storyboards, logo design, TV commercials, and audio production.</p>
                         </div>
@@ -580,8 +580,8 @@
 				</div>
                 <div class="col-md-6 col-lg-4 wow fadeInDown pt-3">
                     <div class="card">
-                        <div class="card-body custom-mr-service">
-							<img src="images/services/ar-development/ar-support-and-maintenance.webp" alt="Product Animation Videos" class="metaverse-service-img">
+                        <div class="card-body">
+							<img src="images/services/animation-service/product-animation.png" alt="Product Animation Videos" class="metaverse-service-img">
                             <h5 class="pt-3 text-white">Product Animation Videos</h5>
                             <p class="pt-2 text-white">We assist businesses in developing excellent product animation videos that teach customers what the product does and how to utilize it. Our professionals collaborate with you to ensure that your definition is clearly presented in an engaging way that leaves the audience interested in your product and, most importantly, that they know how to purchase it.</p>
                         </div>
@@ -589,8 +589,8 @@
                 </div>
                 <div class="col-md-6 col-lg-4 wow fadeInRight pt-3">
 					<div class="card">
-                        <div class="card-body custom-mr-service">
-							<img src="images/services/ar-development/ar-support-and-maintenance.webp" alt="Feature Film Animation Services" class="metaverse-service-img">
+                        <div class="card-body">
+							<img src="images/services/animation-service/feature-flim-animation.png" alt="Feature Film Animation Services" class="metaverse-service-img">
                             <h5 class="pt-3 text-white">Feature Film Animation Services</h5>
                             <p class="pt-2 text-white">We will develop your feature film with the same cutting-edge animation production technologies that have been used to create huge blockbuster films. Our team will convey your storyline with comprehensive animation production services, from plot concept to character design, environments, and cinematic quality.</p>
                         </div>
