--- a/game-development.html
+++ b/game-development.html
@@ -1295,112 +1295,68 @@
 					<p class="text-white">Our game creation company has been assisting businesses with their ideas for over a decade. We create games that brands adore, that people like and share, and generate income. Our award-winning games have helped convert businesses of all kinds - large and small - into high-growth disruptors.</p>
 				</div>
 			</div>
-			<div class="row">
-				<div class="col-md-6">
-					<div class="ptag wow fadeInUp">
-						<div class="vertical-timeline vertical-timeline--animate vertical-timeline--one-column mt-0 mt-md-4">
-							<div class="vertical-timeline-item vertical-timeline-element">
-								<div>
-									<span class="vertical-timeline-element-icon bounce-in">
-										<div class="numbers">
-											<p class="count text-white">1</p>
-										</div>
-									</span>
-									<div class="vertical-timeline-element-content bounce-in">
-										<p class="description text-white">We can deliver your game to any platform—iOS, Android, PC, and Mac—via our in-house development staff and partners.</p>
-									</div>
-								</div>
-							</div>
-							<div class="vertical-timeline-item vertical-timeline-element">
-								<div>
-									<span class="vertical-timeline-element-icon bounce-in">
-										<div class="numbers">
-											<p class="count text-white">2</p>
-										</div>
-									</span>
-									<div class="vertical-timeline-element-content bounce-in">
-										<p class="description text-white">We provide highly tailored service and innovative solutions to meet your specific requirements.</p>
-									</div>
-								</div>
-							</div>
-							<div class="vertical-timeline-item vertical-timeline-element">
-								<div>
-									<span class="vertical-timeline-element-icon bounce-in">
-										<div class="numbers">
-											<p class="count text-white">3</p>
-										</div>
-									</span>
-									<div class="vertical-timeline-element-content bounce-in">
-										<p class="description text-white">We quickly respond and work closely with clients throughout the game development process. We offer help 24/7, so feel free to contact us if you have any questions about our services.</p>
-									</div>
-								</div>
-							</div>
-							<div class="vertical-timeline-item vertical-timeline-element">
-								<div>
-									<span class="vertical-timeline-element-icon bounce-in">
-										<div class="numbers">
-											<p class="count text-white">4</p>
-										</div>
-									</span>
-									<div class="vertical-timeline-element-content bounce-in">
-										<p class="description text-white">You will be assigned a team with competence in all stages of development, including idea design, programming, UI/UX design, testing, and documentation.</p>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
+			<div class="row mt-4">
+				<div class="col-md-5 wow fadeInUp">
+					<ul class="nav nav-tabs benefits-tab flex-column">
+						<li class="nav-item">
+							<a class="nav-link active" data-bs-toggle="tab" href="#platform">Platform</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" data-bs-toggle="tab" href="#solutions">Solutions</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" data-bs-toggle="tab" href="#response">Response Time</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" data-bs-toggle="tab" href="#team">Team</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" data-bs-toggle="tab" href="#access">Access</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" data-bs-toggle="tab" href="#skilled">Skilled Animators</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" data-bs-toggle="tab" href="#design">Design</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" data-bs-toggle="tab" href="#gamers">Gamers</a>
+						</li>
+					</ul>
 				</div>
-				<div class="col-md-6">
-					<div class="ptag wow fadeInUp">
-						<div class="vertical-timeline vertical-timeline--animate vertical-timeline--one-column mt-4">
-							<div class="vertical-timeline-item vertical-timeline-element">
-								<div>
-									<span class="vertical-timeline-element-icon bounce-in">
-										<div class="numbers">
-											<p class="count text-white">5</p>
-										</div>
-									</span>
-									<div class="vertical-timeline-element-content bounce-in">
-										<p class="description text-white">We will provide you with full access to the project at each level of development so that you can observe the process.</p>
-									</div>
-								</div>
-							</div>
-							<div class="vertical-timeline-item vertical-timeline-element">
-								<div>
-									<span class="vertical-timeline-element-icon bounce-in">
-										<div class="numbers">
-											<p class="count text-white">6</p>
-										</div>
-									</span>
-									<div class="vertical-timeline-element-content bounce-in">
-										<p class="description text-white">Our skilled animators employ motion capture technology to bring essential characters and background objects in your game to life.</p>
-									</div>
-								</div>
-							</div>
-							<div class="vertical-timeline-item vertical-timeline-element">
-								<div>
-									<span class="vertical-timeline-element-icon bounce-in">
-										<div class="numbers">
-											<p class="count text-white">7</p>
-										</div>
-									</span>
-									<div class="vertical-timeline-element-content bounce-in">
-										<p class="description text-white">We create powerful, appealing images that set your games apart from the competition and a clean and engaging UI/UX design that makes your game easily accessible.</p>
-									</div>
-								</div>
-							</div>
-							<div class="vertical-timeline-item vertical-timeline-element">
-								<div>
-									<span class="vertical-timeline-element-icon bounce-in">
-										<div class="numbers">
-											<p class="count text-white">8</p>
-										</div>
-									</span>
-									<div class="vertical-timeline-element-content bounce-in">
-										<p class="description text-white">Last but not least, we are avid gamers ourselves—we live and breathe gaming.</p>
-									</div>
-								</div>
-							</div>
+				<div class="col-md-7 wow fadeInUp my-auto">
+					<div class="tab-content">
+						<div id="platform" class="container tab-pane active">
+							<h3 class="text-white pb-2">Platform</h3>
+							<p class="text-white">We can deliver your game to any platform—iOS, Android, PC, and Mac—via our in-house development staff and partners.</p>
+						</div>
+						<div id="solutions" class="container tab-pane fade">
+							<h3 class="text-white pb-2">Solutions</h3>
+							<p class="text-white">We provide highly tailored service and innovative solutions to meet your specific requirements.</p>
+						</div>
+						<div id="response" class="container tab-pane fade">
+							<h3 class="text-white pb-2">Response Time</h3>
+							<p class="text-white">We quickly respond and work closely with clients throughout the game development process. We offer help 24/7, so feel free to contact us if you have any questions about our services.</p>
+						</div>
+						<div id="team" class="container tab-pane fade">
+							<h3 class="text-white pb-2">Team</h3>
+							<p class="text-white">You will be assigned a team with competence in all stages of development, including idea design, programming, UI/UX design, testing, and documentation.</p>
+						</div>
+						<div id="access" class="container tab-pane fade">
+							<h3 class="text-white pb-2">Access</h3>
+							<p class="text-white">We will provide you with full access to the project at each level of development so that you can observe the process.</p>
+						</div>
+						<div id="skilled" class="container tab-pane fade">
+							<h3 class="text-white pb-2">Skilled Animators</h3>
+							<p class="text-white">Our skilled animators employ motion capture technology to bring essential characters and background objects in your game to life.</p>
+						</div>
+						<div id="design" class="container tab-pane fade">
+							<h3 class="text-white pb-2">Design</h3>
+							<p class="text-white">We create powerful, appealing images that set your games apart from the competition and a clean and engaging UI/UX design that makes your game easily accessible.</p>
+						</div>
+						<div id="gamers" class="container tab-pane fade">
+							<h3 class="text-white pb-2">Gamers</h3>
+							<p class="text-white">Last but not least, we are avid gamers ourselves—we live and breathe gaming.</p>
 						</div>
 					</div>
 				</div>
