--- a/virtual-reality-development.html
+++ b/virtual-reality-development.html
@@ -571,99 +571,81 @@
                 <div class="col-md-6 col-lg-4 wow fadeInLeft">
                     <div class="card">
                         <div class="card-body custom-ar-service">
-							<div class="custom-box">
-								<img src="images/services/ar-development/custom-ar-development.webp" alt="Custom AR Development" class="ar-service-img">
-                            	<h5 class="pb-3 text-white ar-services-heading">VR Training & Simulation</h5>
-							</div>
-                            <p class="text-white ar-services-text">Make your training sessions more intuitive, engaging, and risk-free with our VR training and simulation expertise. Ease yourself with the hustle of training batches and facing the consequences during it with our exceptionally experienced VR specialists.</p>
+							<img src="images/services/ar-development/custom-ar-development.webp" alt="Custom AR Development" class="ar-service-img">
+                            <h5 class="pt-3 text-white">VR Training & Simulation</h5>
+                            <p class="text-white pt-2">Make your training sessions more intuitive, engaging, and risk-free with our VR training and simulation expertise. Ease yourself with the hustle of training batches and facing the consequences during it with our exceptionally experienced VR specialists.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4 pt-3 pt-sm-3 pt-md-0 pt-lg-0 wow fadeInDown">
                     <div class="card">
                         <div class="card-body custom-ar-service">
-							<div class="custom-box">
-								<img src="images/services/ar-development/ar-experience-design.webp" alt="AR Experience Design" class="ar-service-img">
-                            	<h5 class="pb-3 text-white ar-services-heading">3D Modeling</h5>
-							</div>
-                            <p class="text-white ar-services-text">Take the benefit of incorporating our interactive content, special effects, and 3D animation effects into the development of your VR app. Our Virtual Reality app developers offer your company comprehensive branding and corporate vision.</p>
+							<img src="images/services/ar-development/ar-experience-design.webp" alt="AR Experience Design" class="ar-service-img">
+                            <h5 class="pt-3 text-white">3D Modeling</h5>
+                            <p class="text-white pt-2">Take the benefit of incorporating our interactive content, special effects, and 3D animation effects into the development of your VR app. Our Virtual Reality app developers offer your company comprehensive branding and corporate vision.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4 wow fadeInRight pt-3 pt-sm-3 pt-md-3 pt-xl-0">
                     <div class="card">
                         <div class="card-body custom-ar-service">
-							<div class="custom-box">
-								<img src="images/services/ar-development/ar-games-development.webp" alt="AR Game Development" class="ar-service-img">
-                            	<h5 class="pb-3 text-white ar-services-heading">VR Game Development</h5>
-							</div>
-                            <p class="text-white ar-services-text">Our VR development services provide breathtaking gaming experiences created with cutting-edge VR technology. Our VR game development has a team of gaming design and development experts who can control interactive and engaging VR game apps with the power to captivate.</p>
+							<img src="images/services/ar-development/ar-games-development.webp" alt="AR Game Development" class="ar-service-img">
+                            <h5 class="pt-3 text-white">VR Game Development</h5>
+                            <p class="text-white pt-2">Our VR development services provide breathtaking gaming experiences created with cutting-edge VR technology. Our VR game development has a team of gaming design and development experts who can control interactive and engaging VR game apps with the power to captivate.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4 wow fadeInLeft pt-3">
                     <div class="card">
                         <div class="card-body custom-ar-service">
-							<div class="custom-box">
-								<img src="images/services/ar-development/ar-app-development.webp" alt="AR App Development" class="ar-service-img">
-                            	<h5 class="pb-3 text-white ar-services-heading">VR Mobile App Development</h5>
-							</div>
-                            <p class="text-white ar-services-text">Our highly skilled and experienced designers and developers will create a brand-new VR mobile app for your company that provides users with a true-to-life experience. So choose us now to realize the full potential of virtual reality technology for your company.</p>
+							<img src="images/services/ar-development/ar-app-development.webp" alt="AR App Development" class="ar-service-img">
+                            <h5 class="pt-3 text-white">VR Mobile App Development</h5>
+                            <p class="text-white pt-2">Our highly skilled and experienced designers and developers will create a brand-new VR mobile app for your company that provides users with a true-to-life experience. So choose us now to realize the full potential of virtual reality technology for your company.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4 wow fadeInUp pt-3">
                     <div class="card">
                         <div class="card-body custom-ar-service">
-							<div class="custom-box">
-								<img src="images/services/ar-development/ar-support-and-maintenance.webp" alt="AR Support And Maintenance" class="ar-service-img">
-                            	<h5 class="pb-3 text-white ar-services-heading">VR Product Configurators</h5>
-							</div>
-                            <p class="text-white ar-services-text">We efficiently incorporate VR into the product configuration process. We value our clients' creative and imaginative abilities and premium on their desires. Our experts create user-friendly and functional product configurators based on client demands.</p>
+							<img src="images/services/ar-development/ar-support-and-maintenance.webp" alt="AR Support And Maintenance" class="ar-service-img">
+                            <h5 class="pt-3 text-white">VR Product Configurators</h5>
+                            <p class="text-white pt-2">We efficiently incorporate VR into the product configuration process. We value our clients' creative and imaginative abilities and premium on their desires. Our experts create user-friendly and functional product configurators based on client demands.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4 wow fadeInRight pt-3">
                     <div class="card">
                         <div class="card-body custom-ar-service">
-							<div class="custom-box">
-								<img src="images/services/ar-development/ar-integration-service.webp" alt="AR Integration Services" class="ar-service-img">
-                            	<h5 class="pb-3 text-white ar-services-heading">VR Video Streaming</h5>
-							</div>
-                            <p class="text-white ar-services-text">Keeping up with the technological curve in a world where digital transformation is everything is essential. We acknowledge the significance of VR video streaming innovation for businesses. For a rich user experience and engagement, we create VR applications that can capture and stream video from events.</p>
+							<img src="images/services/ar-development/ar-integration-service.webp" alt="AR Integration Services" class="ar-service-img">
+                            <h5 class="pt-3 text-white">VR Video Streaming</h5>
+                            <p class="text-white pt-2">Keeping up with the technological curve in a world where digital transformation is everything is essential. We acknowledge the significance of VR video streaming innovation for businesses. For a rich user experience and engagement, we create VR applications that can capture and stream video from events.</p>
                         </div>
                     </div>
                 </div>
 				<div class="col-md-6 col-lg-4 wow fadeInLeft pt-3">
                     <div class="card">
                         <div class="card-body custom-ar-service">
-							<div class="custom-box">
-								<img src="images/services/ar-development/ar-app-development.webp" alt="AR App Development" class="ar-service-img">
-                            	<h5 class="pb-3 text-white ar-services-heading">VR Software Development</h5>
-							</div>
-                            <p class="text-white ar-services-text">We create robust VR software for a spectrum of uses. We provide software development services to everyone, from educational institutions to medical consumers. We offer inventive 3D animations and content visualization services using a cost-effective model.</p>
+							<img src="images/services/ar-development/ar-app-development.webp" alt="AR App Development" class="ar-service-img">
+                            <h5 class="pt-3 text-white">VR Software Development</h5>
+                            <p class="text-white pt-2">We create robust VR software for a spectrum of uses. We provide software development services to everyone, from educational institutions to medical consumers. We offer inventive 3D animations and content visualization services using a cost-effective model.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4 wow fadeInUp pt-3">
                     <div class="card">
                         <div class="card-body custom-ar-service">
-							<div class="custom-box">
-								<img src="images/services/ar-development/ar-support-and-maintenance.webp" alt="AR Support And Maintenance" class="ar-service-img">
-                            	<h5 class="pb-3 text-white ar-services-heading">VR Design Services</h5>
-							</div>
-                            <p class="text-white ar-services-text">We offer exclusive VR design services for branding and corporate vision. Businesses can use our VR designers to create eye-catching content, stunning animations, and special effects in their projects. Our VR design services also include ready workstations and head-mounted display services.</p>
+							<img src="images/services/ar-development/ar-support-and-maintenance.webp" alt="AR Support And Maintenance" class="ar-service-img">
+                            <h5 class="pt-3 text-white">VR Design Services</h5>
+                            <p class="text-white pt-2">We offer exclusive VR design services for branding and corporate vision. Businesses can use our VR designers to create eye-catching content, stunning animations, and special effects in their projects. Our VR design services also include ready workstations and head-mounted display services.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4 wow fadeInRight pt-3">
                     <div class="card">
                         <div class="card-body custom-ar-service">
-							<div class="custom-box">
-								<img src="images/services/ar-development/ar-integration-service.webp" alt="AR Integration Services" class="ar-service-img">
-                            	<h5 class="pb-3 text-white ar-services-heading">Google VR Services</h5>
-							</div>
-                            <p class="text-white ar-services-text">We provide businesses with a diverse range of professional Google VR services and consultation and a promising VR solution and fully functional Daydream and Cardboard apps. We use the power of Google VR services to create exciting apps with high conversion potential.</p>
+							<img src="images/services/ar-development/ar-integration-service.webp" alt="AR Integration Services" class="ar-service-img">
+                            <h5 class="pt-3 text-white">Google VR Services</h5>
+                            <p class="text-white pt-2">We provide businesses with a diverse range of professional Google VR services and consultation and a promising VR solution and fully functional Daydream and Cardboard apps. We use the power of Google VR services to create exciting apps with high conversion potential.</p>
                         </div>
                     </div>
                 </div>
