character design page completed

--- a/3d-exterior-rendering-services.html
+++ b/3d-exterior-rendering-services.html
@@ -464,7 +464,7 @@
 			</div>
 		</div>
 	</section>
-    <!-- End 3D Exterior Gallery -->
+    <!-- End 3D Exterior Showcase -->
 
     <!-- Start 3D Exterior Propeties -->
 	<section class="threed-exterior-properties py-3 py-md-3 py-lg-5">
