--- a/game-development.html
+++ b/game-development.html
@@ -702,12 +702,14 @@
 						</div>
 						<div id="environment" class="container tab-pane fade"><br>
 							<img src="images/services/game-development/environment-design.webp" class="img-fluid service-images">
+							<p class="view-more-button"><a href="environment-design.html">View More</a></p>
 						</div>
 						<div id="threed" class="container tab-pane fade"><br>
 							<img src="images/services/game-development/3d-art.webp" class="img-fluid service-images">
 						</div>
 						<div id="character" class="container tab-pane fade"><br>
 							<img src="images/services/game-development/character-design.webp" class="img-fluid service-images">
+							<p class="view-more-button"><a href="character-design.html">View More</a></p>
 						</div>
 						<div id="animation" class="container tab-pane fade"><br>
 							<img src="images/services/game-development/animation.webp" class="img-fluid service-images">
